// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`__FEATURE_TOGGLES__ populated: __FEATURE_TOGGLES__ 1`] = `
"<script type=\\"application/json\\" id=\\"__FEATURE_TOGGLES__\\">
      {\\\\u0022data\\\\u0022:{\\\\u0022weatherToggle\\\\u0022:{\\\\u0022enabled\\\\u0022:true,\\\\u0022metadata\\\\u0022:{\\\\u0022isItSunnyToday\\\\u0022:true,\\\\u0022areThereWaves\\\\u0022:false}}}}
    </script>"
`;

exports[`only client-safe toggles exposed in __FEATURE_TOGGLES__ : __FEATURE_TOGGLES__-limited-client-side 1`] = `
"<script type=\\"application/json\\" id=\\"__FEATURE_TOGGLES__\\">
      {\\\\u0022data\\\\u0022:{\\\\u0022weatherToggle\\\\u0022:{\\\\u0022enabled\\\\u0022:true,\\\\u0022metadata\\\\u0022:{\\\\u0022isItSunnyToday\\\\u0022:true,\\\\u0022areThereWaves\\\\u0022:false}}}}
    </script>"
`;

exports[`skip middleware if no toggle details provided: __FEATURE_TOGGLES__-empty-no-details-provided 1`] = `
"<script type=\\"application/json\\" id=\\"__FEATURE_TOGGLES__\\">
      {\\\\u0022data\\\\u0022:{}}
    </script>"
`;
